Archive2/b6/7f3aebc0c44725/output
main.cpp: In function ‘int main()’:
main.cpp:137:22: error: no matching function for call to ‘printnl(list_)’
   ::printnl( list_{} );
                      ^
main.cpp:137:22: note: candidate is:
main.cpp:127:6: note: template<int ...Vals> void printnl(const lst_<Vals ...>&)
 void printnl( const lst_<Vals...> &)
      ^
main.cpp:127:6: note:   template argument deduction/substitution failed:
main.cpp:137:22: note:   mismatched types ‘int’ and ‘long unsigned int’
   ::printnl( list_{} );
                      ^
main.cpp:137:22: note:   ‘list_ {aka lst_<10ul, 2ul, 33ul, 33ul, 33ul, 30ul, 14ul, 23ul, 48ul, 76ul, 22ul, 12ul, 43ul, 34ul, 42ul, 23545ul, 46367ul, 45ul>}’ is not derived from ‘const lst_<Vals ...>’
